[package]
name = "rwa-nft"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rwa_nft"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "5.1.1"
casper-types = "6.1.0"
serde = { version = "1", default-features = false, features = ["derive"] }

[features]
default = []
